--- a/index.html
+++ b/index.html
@@ -339,13 +339,9 @@
                 </div>
             </div>
         </section>
-        <section id="about-us" class="p-5 m-5">
+        <section id="about-us" class="m-5">
             <h1 class="text-center m-5">About Our Company</h1>
-            <div class="row">
-                <div class="col-sm-6 text-center">
-                    <img src="./img/img-4.jfif" alt="">
-                </div>
-                <div class="col-sm-6 p-2 mx-auto">
+                <div class="col-md-8 p-2 mx-auto">
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingOne">
@@ -385,7 +381,6 @@
                         </div>
                       </div>
                 </div>
-              </div>
         </section>
     </main>
     <footer class="bg-dark text-light">
